src/test/deca/syntax/valid/objet/New.deca
// Description : test new
// Resultats : ok

class Thing {

    int i;
    
}
{
    Thing i = new Thing();

}

